# talos_wbc_actions

./: CMakeLists.txt  README.md  biped_walking_actions.xml  package.xml
include/talos_wbc_actions/: com_action.h  icp_control_utils.h
src/: icp_control_utils.cpp
src/actions/: CMakeLists.txt  biped_walking_actions_plugins.cpp  com_action.cpp
src/nodes/: CMakeLists.txt  push_com_action.cpp
