<?xml version="1.0"?>
<package format="2">
  <name>talos_wbc_actions</name>
  <version>0.3.1</version>
  <description>The talos_wbc_actions package</description>

  <maintainer email="sanghyun.kim@ed.ac.uk">Sanghyun Kim</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pal_locomotion</depend>
  <depend>pluginlib</depend>

  <export>
    <pal_locomotion plugin="${prefix}/biped_walking_actions.xml" />
  </export>

</package>
